Make Link in Contact

--- a/src/components/ContactList/Contact/Contact.scss
+++ b/src/components/ContactList/Contact/Contact.scss
@@ -1,6 +1,10 @@
 .Contact {
+	display: block;
 	padding: 1rem 2rem;
 
+	text-decoration: none;
+
+	color: #000;
 	cursor: pointer;
 
 	&:not(:last-child) {
