--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -11,18 +11,19 @@
 	}
 
 	&-Input {
+		margin: 0;
 		padding: 0.5rem 1rem;
 
 		font-size: 1rem;
 
 		border: none;
 		border-bottom: 1px solid #ccc;
+		border-radius: 0 !important;
+		box-sizing: border-box;
 		outline: none !important;
 
 		&_space {
 			margin-top: 1.5rem;
-
-			border-top: 1px solid #ccc;
 		}
 	}
 
